{
    "name": "PlayerAction",
    "maps": [
        {
            "name": "Player",
            "id": "893352c2-ec85-4ca5-8e5a-74e1d7eff144",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "f8aa1d96-bdfc-4fad-92aa-e1bf70bc016e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PressAttack",
                    "type": "Value",
                    "id": "0095340f-5efe-45c3-8007-3a73296fc224",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HoldAttack",
                    "type": "Value",
                    "id": "61199413-6838-49bb-862a-00e8640f6673",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.1)",
                    "initialStateCheck": true
                },
                {
                    "name": "Spell_Q",
                    "type": "Button",
                    "id": "e3138add-e09e-4b3a-92ea-e3379383beca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell_E",
                    "type": "Button",
                    "id": "5358e4f6-84e0-4605-9d1c-ab365bed25a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell_R",
                    "type": "Button",
                    "id": "4ad1c132-e717-467e-ba1c-16635f674685",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell_Shift",
                    "type": "Button",
                    "id": "2ca38f5f-5fb3-4440-b4e8-bdd05496a763",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "9e3ec70f-7e0b-481f-b820-b31b63420273",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0c8b1d67-c5f3-44f8-9073-e0d7d42b1c5d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "61a4e086-86c9-4554-8345-6a207dc3e4af",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "710482cc-0769-4c73-8e36-6e00191b81ef",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "734fe8bc-04eb-4202-a302-85c50f38cbe5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "64885308-9f28-4f9a-9c7c-480f6676d7bf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "beca9ec1-a4d4-496c-ab74-b4e7fe90fa1e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af0b16bd-5690-46f4-a86d-63f8e7667b1e",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell_Q",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35f6eb86-2b1a-4715-b9d2-f1cedec3644c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell_E",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eda7dba0-d069-4ed5-aff3-6a17f7bc1803",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell_R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "868308be-ba8e-40e9-9060-8b70d98b4ca4",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell_Shift",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}